# employee-django

./: pyproject.toml
company/: admin.py  models.py
company/management/commands/: generate_employees.py
orm/: asgi.py  settings.py  urls.py  wsgi.py
people/: models.py
